--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: Amarjeet Chauhan
+#title: jeetc
 
 # Short description of your site
 description: Amrjeet Chauhan's personal blog!
@@ -64,7 +64,7 @@ footer-link-col: "#404040"
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: Some Person
+  name: Amarjeet Chauhan
 
 # Select your active Social Network Links.
 # Uncomment the links you want to show in the footer and add your information to each link.
