--- a/_config.yml
+++ b/_config.yml
@@ -14,10 +14,10 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: Hello World !!
+title: Amrjeet Chauhan
 
 # Short description of your site
-description: Amrjeet Chauhan's personal blog!
+description: Personal blog!
 
 # --- Navigation bar options --- #
 
