--- a/_config.yml
+++ b/_config.yml
@@ -25,9 +25,8 @@ description: Personal blog!
 navbar-links:
   About Me: "aboutme"
   Resources:
-    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
-    - Learn markdown: "http://www.markdowntutorial.com/"
-    - GitHub Pages: "https://pages.github.com/"
+    - Github: "https://github.com/rahulcse1"
+    - Linkedin: "https://in.linkedin.com/rahulcse1"
   Author's home: "https://rahulcse1.github.io"
 
 # Image to show in the navigation bar - image must be a square (width = height)
