--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ navbar-links:
   About Me: "aboutme"
   Resources:
     - Github: "https://github.com/rahulcse1"
-    - Linkedin: "https://in.linkedin.com/rahulcse1"
+    - Linkedin: "https://www.linkedin.com/in/rahulcse1/"
   Author's home: "https://rahulcse1.github.io"
 
 # Image to show in the navigation bar - image must be a square (width = height)
